# welbex

./: .env  .env.sample  .gitignore  Dockerfile  README.md  create_db.sql  docker-compose.yml  pyproject.toml
car/: models.py  serializers.py  tasks.py  urls.py  views.py
car/management/commands/: add_cars.py  refresh_car_location.py
car/migrations/: 0001_initial.py
cargo/: filters.py  models.py  serializers.py  sevices.py  urls.py  views.py
cargo/migrations/: 0001_initial.py
config/: settings.py  urls.py
location/: models.py
location/management/commands/: add_locations.py
location/migrations/: 0001_initial.py
